# Player4

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/cc/imorning/player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.c
app/src/main/cpp/include/: logger.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/player/: main.cpp  mp3_player.cpp  mp3_player.h
app/src/main/java/cc/imorning/player/: App.java  Jni.java  MainActivity.kt
app/src/main/java/cc/imorning/player/activity/: MainActivity.java  VideoPlayerActivity.kt
app/src/main/java/cc/imorning/player/adapter/: VideoAdapter.java
app/src/main/java/cc/imorning/player/beans/: Video.java
app/src/main/java/cc/imorning/player/player/audio/mp3/: Mp3Player.java
app/src/main/java/cc/imorning/player/player/video/: IJKCorePlayer.java
app/src/main/java/cc/imorning/player/utils/: FileUtils.java  VideoScanner.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_video.xml  video_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cc/imorning/player/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
